﻿IMPROVEMENTS / FIXES
- General:
	- Fix the g-limit overrides from needing to save the persistent savegame, which was leaving spawned craft in play when reverting to the SPH.
- AI / WM:
	- Add missing unclamped limits for 3-axis static damping.
- Weapons:
	- Add a "Yaw Standby Angle" slider to gun turrets.
	- Missiles:
		- Add improved missile controller.
		- Fix multi-missile launcher issues when railAmmo > launcher rails on the model.
		- Fix check for multi-mode engines being ignited and having fuel.
- Competition:
	- Updated parsing and plotting scripts.
		- Using 'python parse_tournament_log_files.py -w cfg' reads the score weights from the score_weights.cfg file.
		- Using 'python plot_summary.py -i regex' creates the plot ignoring any craft matching the regex string.
- Spawning:
	- Automatically adjust the PRE range if the spawn distance would put craft outside the physics range.

v1.10.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix colliders on the AWACS Radar when using legless variant.
	- Update the logic for syncing advanced 'Game Difficulty' settings to respect custom G-limit settings.
- UI:
	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
	- Update localisation synchronisation script and sync en-us to other languages. Missing entries are commented out and tagged with ??? and the English translation (to assist with user contributions).
	- Fix the wrongly labeled "ru-ru" localisation to "ru" so that it loads properly.
	- Add additional Chinese localisation thanks to user ZIYUXUAN201011.
	- Updated German localisation from EzBro.
	- Adjust waypoint ranking in the vessel switcher window to be based on the current score weights.
	- Fix m/km units in Team Icons to be used appropriately.
	- Automatically disable team scores in the score window when running FFA tournaments or continuous spawning.
- AI: